# RedPepper

./: .clang-format  .gitignore  .gitmodules  ARMCC.cmake  CMakeLists.txt  DECOMPILING.md  README.md  diff_settings.py
Data/: Code.json  DecompiledNonMatching.json  Linker.ld  NonMatching.json  NonMatchingDecompiled.json  NonMatchingMajor.json  NonMatchingMinor.json  NotDecompiled.json  OK.json  Total.json
DataSymbols/Game/Enemy/: FireBall.sym  Fugumannen.sym  GhostPlayer.sym  GhostPlayerRecorder.sym  Togezo.sym
DataSymbols/Game/MapObj/: AppearStep.sym  AquariumSwimDebris.sym  CoinRotater.sym  FlowerPot.sym  NoteObj.sym  NoteObjGenerator.sym  RailDot.sym  RailDotEnd.sym  TransparentWall.sym  TrickHintPanel.sym
DataSymbols/Game/Npc/: AquariumSwimDebris.sym  FlowerPot.sym  PeachRope.sym  RailDot.sym  RailDotEnd.sym
DataSymbols/Game/Player/: GhostPlayer.sym  PlayerActionConditionAnimEnd.sym  PlayerActionMultiCondition.sym  PlayerAnimator.sym
DataSymbols/Game/Sequence/: ProductStateTitle.sym
DataSymbols/Game/System/: Application.sym  GameSystem.sym
DataSymbols/al/AreaObj/: AreaShape.sym  AreaShapeCube.sym  SwitchAreaDirector.sym
DataSymbols/al/Camera/: Camera.sym
DataSymbols/al/Execute/: ExecuteDirector.sym
DataSymbols/al/Factory/: ActorFactory.sym  AreaObjFactory.sym
DataSymbols/al/Functor/: FunctorV0F.sym  FunctorV0M.sym
DataSymbols/al/Layout/: WipeSimple.sym
DataSymbols/al/LiveActor/: ActorPoseKeeper.sym  HitSensorDirector.sym  LiveActor.sym  SensorFunction.sym
DataSymbols/al/MapObj/: FallMapParts.sym  MapObjActor.sym
DataSymbols/al/Nerve/: NerveActionCtrl.sym
DataSymbols/al/Npc/: BreakModel.sym  EffectObj.sym  Sky.sym
DataSymbols/al/Rail/: RailMoveMovement.sym
DataSymbols/sead/math/: seadQuat.sym  seadVector.sym
DataSymbols/sead/prim/: seadSafeString.sym
Include/: Game  al  types.h
Include/Game/Demo/: DemoSceneActor.h
Include/Game/Enemy/: EnemyStateBlowDown.h  EnemyStateBlowDownParam.h  EnemyStateUtil.h  FireBall.h  Fugumannen.h  GhostPlayer.h  GhostPlayerRecorder.h  Togezo.h  WalkerStateChase.h  WalkerStateChaseParam.h  WalkerStateParam.h  WalkerStateWander.h  WalkerStateWanderParam.h
Include/Game/Layout/: GameCountUp.h  WindowConfirmButton.h  WindowConfirmSingle.h
Include/Game/MapObj/: AppearStep.h  AquariumSwimDebris.h  CoinCharger.h  CoinRotater.h  FlowerPot.h  ItemHolder.h  MapObjActor.h  NoteObj.h  NoteObjGenerator.h  PeachRope.h  RailDot.h  RailDotEnd.h  TransparentWall.h  TrickHintPanel.h
Include/Game/Player/: Player.h  PlayerAction.h  PlayerActionCondition.h  PlayerActionConditionAnimEnd.h  PlayerActionGraph.h  PlayerActionMultiCondition.h  PlayerActionNode.h  PlayerActor.h  PlayerActorInitInfo.h  PlayerAnimFrameCtrl.h  PlayerAnimator.h  PlayerFunction.h  PlayerInitFunc.h  PlayerModelHolder.h  PlayerProperty.h  PlayerTrigger.h
Include/Game/Scene/: SceneObjFactory.h  StageScene.h
Include/Game/Sequence/: ProductSequence.h  ProductStageStartParam.h  ProductStateCourseSelect.h  ProductStateStage.h  ProductStateTitle.h  StageWipeKeeper.h
Include/Game/System/: Application.h  ApplicationFunction.h  GameSystem.h  RootTask.h
Include/Game/Util/: SensorMsg.h
Include/LMS/: LMS_Impl.h  LMS_Message.h
Include/al/AreaObj/: AreaInitInfo.h  AreaObj.h  AreaShape.h  AreaShapeCube.h  SwitchAreaDirector.h  SwitchKeepOnAreaGroup.h  SwitchOnAreaGroup.h
Include/al/Audio/: AudioKeeper.h
Include/al/Camera/: Camera.h  CameraDashAngleTunerParam.h  CameraParamVision.h  CameraRotatorParam.h
Include/al/Clipping/: ClippingActorHolder.h  ClippingActorInfoList.h  ClippingDirector.h
Include/al/Collision/: Collider.h  CollisionDirector.h  CollisionParts.h  CollisionUtil.h  KCollisionServer.h
Include/al/Controller/: ControllerUtil.h
Include/al/Effect/: EffectKeeper.h  EffectSystem.h
Include/al/Execute/: ExecuteDirector.h  ExecuteOrder.h  ExecuteRequestKeeper.h  ExecuteTableHolder.h  ExecuteTableHolderDraw.h  ExecuteTableHolderUpdate.h
Include/al/Factory/: ActorFactory.h  AreaObjFactory.h  CameraFactory.h  Factory.h
Include/al/File/: FileFunction.h  FileLoader.h
Include/al/Fog/: FogDirector.h
Include/al/Functor/: FunctorBase.h  FunctorV0F.h  FunctorV0M.h
Include/al/HitSensor/: HitSensor.h  SensorHitGroup.h
Include/al/Layout/: LayoutActor.h  LayoutInitInfo.h  LayoutKit.h  WipeSimple.h
Include/al/LiveActor/: ActionAnimCtrl.h  ActorActionKeeper.h  ActorExecuteInfo.h  ActorInitInfo.h  ActorInitUtil.h  ActorPoseFunction.h  ActorPoseKeeper.h  HitSensor.h  HitSensorDirector.h  HitSensorFunction.h  HitSensorKeeper.h  LiveActor.h  LiveActorFlag.h  LiveActorFunction.h  LiveActorGroup.h  LiveActorKit.h  SensorFunction.h  SensorMsg.h  SubActorFunction.h  SubActorKeeper.h
Include/al/MapObj/: FallMapParts.h  MapObjActor.h
Include/al/Math/: HashUtil.h  MathUtil.h  MtxUtil.h  QuatUtil.h  RandomUtil.h  VectorUtil.h
Include/al/Memory/: MemorySystem.h
Include/al/Message/: MessageFunction.h
Include/al/Model/: AnimInfoTable.h  AnimPlayerSimple.h  AnimPlayerSkl.h  ModelKeeper.h  alModelCtr.h
Include/al/Nerve/: ActorStateBase.h  HostStateBase.h  Nerve.h  NerveActionCtrl.h  NerveExecutor.h  NerveFunction.h  NerveKeeper.h  NerveStateBase.h  NerveStateCtrl.h
Include/al/Npc/: BreakModel.h  EffectObj.h  Sky.h
Include/al/Placement/: PlacementFunction.h  PlacementInfo.h
Include/al/Rail/: Rail.h  RailFunction.h  RailKeeper.h  RailMoveMovement.h  RailRider.h
Include/al/Resource/: Resource.h
Include/al/Save/: SaveDataDirector.h  SaveDataSequenceBase.h  SaveDataSequenceInitDir.h
Include/al/Scene/: CreatorClassNameTableHolder.h  ISceneObj.h  Scene.h  SceneFunction.h  SceneObjHolder.h
Include/al/Se/: SeFunction.h
Include/al/Sequence/: Sequence.h
Include/al/Shadow/: ShadowKeeper.h
Include/al/Stage/: StageResourceKeeper.h  (+3 more)
Include/nn/: Handle.h  Result.h
Source/: Stubs.c  Stubs.cpp  crt0.cpp
Source/LMS/: LMS_Impl.c  LMS_Message.c
Symbols/: Unnamed.sym
Symbols/LMS/: LMS_Impl.sym  LMS_Message.sym
Symbols/lib/: crt0.sym
Tools/: build.py  check.py  diff.py  dumpsymbols.py  genLinkerScript.py  progress.py  settings.py
(+376 files in other folders)
